--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,20 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "emotional": "0.0.3",
     "encoding": "~0.1.12",
     "express": "~4.13.4",
     "flat-file-db": "^1.0.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "lodash": "^4.13.1",
     "lowdb": "^0.13.0-beta-5",
     "mysql": "~2.10.2",
+    "node-gmail-api": "^0.6.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth2": "^0.1.6",
     "pngjs": "~2.3.1",
     "random-name": "~0.1.1",
     "twitter": "^1.2.5",
