--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "passport-google-oauth2": "^0.1.6",
     "pngjs": "~2.3.1",
     "random-name": "~0.1.1",
+    "socket.io": "^1.7.3",
     "twitter": "^1.2.5",
     "yo": "^1.8.5"
   }
